# profiler-syntax-highlighting

./: Cargo.toml  LICENSE_MIT  README.md
crates/profiler-syntax-highlighting-lib/: Cargo.toml
crates/profiler-syntax-highlighting-lib/examples/: syntaxtest.rs
crates/profiler-syntax-highlighting-lib/src/: lib.rs
src/: lib.rs
