[package]
name = "profiler-syntax-highlighting"
version = "0.1.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
profiler-syntax-highlighting-lib = { path = "crates/profiler-syntax-highlighting-lib/" }
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
