[package]
name = "profiler-syntax-highlighting"
version = "0.2.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
edition = "2018"
description = "Syntax highlighting in WASM, with self-contained markup for each line, for use in virtual lists."
repository = "https://github.com/mstange/profiler-syntax-highlighting"
license = "Apache-2.0 OR MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
profiler-syntax-highlighting-lib = { path = "crates/profiler-syntax-highlighting-lib/" }
wasm-bindgen = "0.2.63"
wee_alloc = { version = "0.4.5" }

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
